--- a/src/main/asciidoc/tutorials.adoc
+++ b/src/main/asciidoc/tutorials.adoc
@@ -763,7 +763,11 @@ There are one benefit and one concern of build time solution:
 
 Both task and maven plugin allow to configure the following options:
 
-* `xml`: the `wuic.xml` file location (which is configured as usual)
+* `xml`: the `wuic.xml` file location (which is configured as usual). Optional is `baseDir` and `path` are defined
+* `baseDir`: a base directory to be scanned by a default `DiskNutDao`
+* `path`: a path to resolve inside the `baseDir` that is treated as a wildcard by default
+* `useRegex`: consider the path as a regex instead of a wildcard
+* `taskName`: the task name used to create a heap identified with it (default value is `wuic-task`) that resolves the `path` in the `baseDir`
 * `properties`: the `wuic.properties` file location (which is optional)
 * `output`: base path where results are written by the plugin
 * `charset`: by default `UTF-8`, change it if you want to write processed text content (scripts, SVG, etc) with a different encoding
@@ -772,6 +776,9 @@ Both task and maven plugin allow to configure the following options:
 * `moveToTopDirPattern`: a regex matching the name of files to keep on top of the directory structure, typically the HTML page you want to keep in the root of your website
 
 You will see in the next sections how they can be declared.
+
+TIP: you can see that `baseDir`, `path`, `useRegex` (`true` by default) and `taskName` (`wuic-task` by default) can be enough to configure
+the resolution of a set of resources on the disk, making the use `wuic.xml` file optional (both techniques can be combined)
 
 ==== With Maven plugin
 
