Fixes code example.

--- a/src/main/asciidoc/advanced-tutorials.adoc
+++ b/src/main/asciidoc/advanced-tutorials.adoc
@@ -127,7 +127,7 @@ Alternatively in JSON:
 {
     "workflowTemplates" : [{
         "id" : "tpl"
-        "without" : [{defaultCache}]
+        "without" : [{"defaultCache"}]
         "engineChain" : ["ehcache", "yuiCompressorJavascript", "yuiCompressorCss"]
     }], "workflows" : [{
         "idPrefix" : "my-",
