Add support for servlet 4 and its HTTP/2 feature.
The HtmlParserFilter detects if the servlet API is prior to version 4. In that case, only native API can be used for HTTP/2 server-push. However, if servlet 4 API is available, WUIC will always use it to push resources.

Fixes #238

--- a/src/main/asciidoc/more-tutorials.adoc
+++ b/src/main/asciidoc/more-tutorials.adoc
@@ -434,9 +434,12 @@ of `resource-hints`.
 
 === Java server
 
-Java server and even servlet containers don't implement any standard API for HTTP/2. This means that each server comes
-with its own API that you need to specifically implement. WUIC hides those API and comes with a support for a specific
-server under the form of a JAR file.
+Servlet API version 4 will provide a support for HTTP/2 and server-push.
+This specification is under development and support is still limited by the servlet container.
+Anyway, if the any servlet container supports servlet 4, WUIC will use it to leverage server push.
+
+Moreover, each servlet container supporting an older version of the specification can come with its own native API.
+WUIC provides a support for some of the native API under the form of a JAR file to be available on the classpath.
 
 ==== Servlet containers
 
